# gwma-paper-public

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
configs/data/: gaussian.yaml  glitch.yaml  pure_glitch.yaml
configs/experiment/: ablation_no_pretrain.yaml  baseline_bilstm.yaml  baseline_unet.yaml  finetune.yaml  paper_main.yaml  pretrain.yaml
configs/model/: bilstm.yaml  gwma.yaml  unet1d.yaml
scripts/: evaluate.py  generate_data.py  reproduce_paper.py  summarize_results.py  train.py
src/gwma/: __init__.py  config.py
src/gwma/data/: datasets.py  glitches.py  waveforms.py
src/gwma/evaluation/: __init__.py
src/gwma/losses/: reconstruction.py
src/gwma/metrics/: __init__.py  statistics.py
src/gwma/models/: factory.py  framing.py  gwma.py  unet1d.py
src_zh/src/gwma/: __init__.py  config.py  utils.py
src_zh/src/gwma/data/: __init__.py  datasets.py  glitches.py  waveforms.py
src_zh/src/gwma/evaluation/: plan.py
src_zh/src/gwma/losses/: __init__.py  reconstruction.py
src_zh/src/gwma/metrics/: overlap.py
src_zh/src/gwma/models/: __init__.py  bilstm.py  framing.py  gwma.py  layers.py
src_zh/src/gwma/training/: __init__.py  checkpoints.py  engine.py
