[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gwma"
version = "0.1.0"
description = "Reproducible masked waveform reconstruction for gravitational-wave denoising"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [
  { name = "Ming-Yi Chen" },
]
dependencies = [
  "h5py>=3.10",
  "numpy>=1.26",
  "PyYAML>=6.0",
  "scipy>=1.11",
  "torch>=2.7,<2.8",
  "tqdm>=4.66",
]

[project.optional-dependencies]
gw = [
  "pycbc>=2.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/gwma"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
